boulder/boulder/tests/compile_fail/scope/ret_ty.bo
# Mismatched types
# found `u32`
# expected `Empty`
# (7:
# (8:

fn ret_ty() -> u32 {
    return Empty;
    5
}